tests/success/test_funciones_externas.tds
/*
Este test es correcto
*/
integer inc(integer x){
    return x + 1;
}
extern integer get_int();

extern void print_int(integer i, bool flag, integer z);

integer main(){
    integer y;
    integer x;
    y = 1;
    {
        integer x;
        x = 2;
        y = x + 1;
    }
    return x;
}
